------ omnetpp-2.0b4 released ------
Jun 2, 2000
 - minor fix in tkcmd.cc [reported by Richard Lyon]
------ omnetpp-2.0b5 released ------
July 17, 2000
 - fixed bug in splitInspectorName()  [reported by Ulrich Kaage]
July 26, 2000
 - fixed a bug which caused Tcl error when using ev<< or ev.printf() with
   a string than contained curly braces [reported by Nick van Foreest]
 - added Edit|Find... to main menu.
Aug 7, 2000
 - makefile changes for RPM support
Sep 29, 2000
 - fixed a bug which caused Tkenv NOT to report an error when the 'p' display
   string tag's 3rd arg (layout) was invalid
 - the 'p' display string tag's 3rd arg (layout) can now be abbreviated:
   r=row, c=col=column, m=matrix, i=ri=ring
 - added new layout to 'p' tag: exact (abbreviation: e or x); this lets
   one position modules in a module vector one by one
 - submodule display strings may use the parent module's parameters too
Jan 3, 2001
 - added 2nd status bar (containing: number of messages in the FES, total
   number of messages created, number of currently existing message objects)
Jan 13, 2001
 - added performance status bar (simsec/sec, events/sec, events/simsec gauges)
Jan 15, 2001
 - new feature: debug output window (for ev<< messages) can now be opened
   for compound modules too: it accumulates messages from all submodules.
   [suggested by Ulrich Kaage]
 - single-stepping within a module is now possible for compound modules too
 - revised single-stepping within a module: now execution stops both
   *before* and *after* events in that module, and events in that module are
   done with "normal execution" (animation, etc), while intervening events are
   done with "fast execution" (rare inspector updates, animation disabled)
Jan 16, 2001
 - fix: added Tcl_FindExecutable(argv[0]) to Tcl initialization code (needed by
   Cygwin 1.1)
Jan 21, 2001
 - "find" and "find next" functionality improved and now it works for all
   module output windows. Hotkeys: Ctrl-F, and F3 or Ctrl-N.