@@ -410,3 +410,7 @@ Jan 16, 2001
 Jan 21, 2001
  - "find" and "find next" functionality improved and now it works for all
    module output windows. Hotkeys: Ctrl-F, and F3 or Ctrl-N.
+ - added hotkeys for step, run, etc commands:
+     F4 Step, F5 Run, F6 Fast Run, F7 Express Run, F8 Stop, Ctrl-F5 Step within
+     module
+    
